<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventCreationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <EditText
            android:id="@+id/text_input_create_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/event_name"
            android:inputType="text"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/text_input_create_event_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/text_input_create_event_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:hint="Criteria and guidelines"
            android:inputType="textMultiLine"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/text_input_create_event_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="Registration start"
            android:inputType="date"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/text_input_create_event_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="Registration end"
            android:inputType="date"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/text_input_create_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="Event time"
            android:inputType="time"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_require_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto"
                android:hint="Require location"
                android:text="Require location"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/text_input_create_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter location"
                android:inputType="text"
                android:textSize="17sp"
                android:visibility="gone"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="Limit number of entrants (optional):"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/text_input_create_limit"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="No selection"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="Set event poster"
                android:textSize="17sp" />

            <Button
                android:id="@+id/button_upload_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="Upload"
                android:textSize="17sp"
                app:icon="@drawable/upload"
                app:iconPadding="4dp"
                app:iconTint="@color/white"
                app:cornerRadius="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_create_to_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:backgroundTint="@color/oxford_light_grey"
                android:fontFamily="@font/roboto_light"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                app:cornerRadius="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="Back"
                android:textColor="@color/oxford_blue"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_create_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                app:backgroundTint="@color/light_blue"
                android:fontFamily="@font/roboto_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="Create"
                android:textColor="@color/oxford_blue"
                android:textSize="16sp"
                app:cornerRadius="12dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>