<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:id="@+id/homeFragment"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:clipToPadding="false"
    android:paddingBottom="?attr/actionBarSize"
    android:layout_marginBottom="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_open_filter"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="8dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:paddingVertical="12dp"
        android:text="Filter"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/oxford_blue"
        app:icon="@drawable/filter_svgrepo_com"
        app:iconGravity="textStart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_card_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/event_overview_card"/>

</LinearLayout>