...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/oxford_blue"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:iconTint="@color/white"
                app:layout_scrollFlags="noScroll" />

...
